--- a/librecad/res/icons/icons.qrc
+++ b/librecad/res/icons/icons.qrc
@@ -195,5 +195,6 @@
         <file>text_align_topright.svg</file>
         <file>options.svg</file>
         <file>line_polygon_cen_tan.svg</file>
+        <file>dim_ordinate.svg</file>
     </qresource>
 </RCC>
